--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/date-fns": "^2.6.0",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
